# llmstrip

./: .gitignore  CHALLENGE.md  CHANGELOG.md  CONTRIBUTING.md  CURSOR.md  LICENSE  Makefile  README.md  WARP.md
.github/ISSUE_TEMPLATE/: bug_report.md  false_positive.md
.github/workflows/: release.yml
assets/: demo.tape  sample.py
cli/: Cargo.toml
cli/src/: config.rs  error.rs  main.rs
cli/src/rules/: ignore.rs  mod.rs  text.rs
cli/tests/: integration.rs
prompts/: agents.md  claude-code.md  copilot.md  cursor.mdc  openai.md  system-prompt.md
scripts/: build-all.sh  install.sh  release.sh
