[package]
name = "llmstrip"
version = "0.3.3"
default-run = "llmstrip"
publish = false
edition = "2021"
description = "Detect and remove LLM-isms from text, code comments, and commit messages"
license = "MIT"
repository = "https://github.com/HugoLopes45/llmstrip"
keywords = ["linter", "ai", "style", "llm", "text"]
categories = ["command-line-utilities", "text-processing"]
readme = "../README.md"
exclude = [".github/", "prompts/", "rules/", ".forge/"]
rust-version = "1.82"

[[bin]]
name = "llmstrip"
path = "src/main.rs"

[dependencies]
clap = { version = "=4.5.38", features = ["derive"] }
thiserror = "1.0"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
similar = "2.4"
anstyle = "1.0"

[dev-dependencies]
# tempfile 3.20+ pulls getrandom 0.4.x (edition2024, requires Cargo 1.85).
# Pin to 3.19.x to stay within MSRV 1.82.
tempfile = "=3.19.1"
